--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "ccxt>=4.4.57",
+    "flask>=3.1.0",
+    "flask-wtf>=1.2.2",
     "numpy>=2.2.2",
     "pandas>=2.2.3",
     "python-dotenv>=1.0.1",
     "python-telegram-bot>=21.10",
     "telegram>=0.0.1",
+    "wtforms>=3.2.1",
 ]
