--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "ccxt>=4.4.57",
+    "flask-login>=0.6.3",
     "flask>=3.1.0",
     "flask-wtf>=1.2.2",
     "numpy>=2.2.2",
@@ -13,4 +14,5 @@ dependencies = [
     "python-telegram-bot>=21.10",
     "telegram>=0.0.1",
     "wtforms>=3.2.1",
+    "oauthlib>=3.2.2",
 ]
