Agent step too complex - Build the initial prototype
Update dependencies to exact versions specified and generate project icon.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,17 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
-    "ccxt>=4.4.57",
-    "flask-login>=0.6.3",
-    "flask>=3.1.0",
-    "flask-wtf>=1.2.2",
-    "numpy>=2.2.2",
-    "pandas>=2.2.3",
-    "python-dotenv>=1.0.1",
-    "python-telegram-bot>=21.10",
-    "telegram>=0.0.1",
-    "wtforms>=3.2.1",
-    "oauthlib>=3.2.2",
-    "requests>=2.32.3",
+    "ccxt==4.4.57",
+    "flask-login==0.6.3",
+    "flask==3.1.0",
+    "flask-wtf==1.2.2",
+    "numpy==2.2.2",
+    "pandas==2.2.3",
+    "python-dotenv==1.0.1",
+    "python-telegram-bot==21.10",
+    "telegram==0.0.1",
+    "wtforms==3.2.1",
+    "oauthlib==3.2.2",
+    "requests==2.32.3",
     "twilio>=9.4.4",
 ]
